--- a/style.css
+++ b/style.css
@@ -822,6 +822,23 @@ footer .copyright{
 }
 
 @media screen and (max-width: 900px) {
+    #hero{
+        height: 35vh;
+        width: 100%;
+        background-size: cover;
+        background-position: top 0% right 0;
+        padding: 0 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    #produto1{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 50px;
+        flex-wrap: wrap;
+    }
   .carousel img{
     width: calc(100% / 2);
   }
